--- a/package.json
+++ b/package.json
@@ -118,6 +118,8 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@rollup/plugin-typescript": "^8.2.1"
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@types/pngjs": "^6.0.0",
+    "pngjs": "^6.0.0"
   }
 }
